<resources>
    <string name="app_name">Gadget Vault</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="confirm">Confirm</string>
    <string name="total">Total</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="buy_now">Buy Now</string>
</resources>